schema/testdata/validation_relationships_attr_related_missing/schema.keel
model Author {
    fields {
        coWritten Post[]
        written Post[]
    }
}

model Post {
    fields {
        author Author
        coAuthor Author
    }
}
