schema/testdata/errors/relationships_one_to_many_needs_relation_attribute.keel
model Author {
    fields {
        written Post
        //expect-error:9:18:RelationshipError:Cannot associate with repeated field 'author' on Post to form a one to many relationship because it is already associated with field 'written'
        coWritten Post
    }
}

model Post {
    fields {
        author Author[]
        //expect-error:9:17:RelationshipError:Cannot form a one to many relationship with field 'coWritten' on Author as it is already associated with field 'author'
        //expect-error:9:17:RelationshipError:Cannot form a one to many relationship with field 'written' on Author as it is already associated with field 'author'
        coAuthor Author[]
    }
}
